--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinTrack">
         <activity
-            android:name=".Activities.introActivity.IntroActivity"
+            android:name=".activities.intro.IntroActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.dashboard.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.FinTrack" />
     </application>
